testsuite/tests/polykinds/T7433.stderr

T7433.hs:3:10: error: [GHC-68567]
    Illegal type: ‘'Z’
    Suggested fix: Perhaps you intended to use DataKinds
